Fix title icon vertical alignment when title text wraps

--- a/apps/lite/ui/src/routes/project/$id/workspace/Details.module.css
+++ b/apps/lite/ui/src/routes/project/$id/workspace/Details.module.css
@@ -34,9 +34,21 @@
 }
 
 .title {
-	display: flex;
+	display: grid;
+	grid-template-rows:
+		/* Match regular button height. */
+		28px
+		auto;
 	column-gap: 8px;
 	align-items: center;
+
+	& > i {
+		grid-row: 1 / 2;
+	}
+
+	& > h3 {
+		grid-row: 1 / -1;
+	}
 }
 
 .actions {
